# inspect_GoogleTest

./: .gitignore  CMakeLists.txt  README.md
gtests/: CMakeLists.txt  test_template.cpp
